src/snapshots/psql_query_exporter__metrics__tests__multi_suffixes_updated_1.snap
---
source: src/metrics.rs
description: "collector test case 'multi_suffixes', after update 1"
---
# HELP multi_suffixes_with_const_labels_float_suffix multi_suffixes_with_const_labels: float_suffix
# TYPE multi_suffixes_with_const_labels_float_suffix gauge
multi_suffixes_with_const_labels_float_suffix{const_label_key_1="const_label_value_1",const_label_key_2="const_label_value_2"} 73.25999999999999
# HELP multi_suffixes_with_const_labels_int_suffix multi_suffixes_with_const_labels: int_suffix
# TYPE multi_suffixes_with_const_labels_int_suffix gauge
multi_suffixes_with_const_labels_int_suffix{const_label_key_1="const_label_value_1",const_label_key_2="const_label_value_2"} 72
# HELP multi_suffixes_with_expiration_count multi_suffixes_with_expiration: count
# TYPE multi_suffixes_with_expiration_count gauge
multi_suffixes_with_expiration_count 6
# HELP multi_suffixes_with_var_labels_count multi_suffixes_with_var_labels: count
# TYPE multi_suffixes_with_var_labels_count gauge
multi_suffixes_with_var_labels_count{name="Jack"} 2
multi_suffixes_with_var_labels_count{name="Jane"} 2
multi_suffixes_with_var_labels_count{name="John"} 2
# HELP multi_suffixes_with_var_labels_float_suffix multi_suffixes_with_var_labels: float_suffix
# TYPE multi_suffixes_with_var_labels_float_suffix gauge
multi_suffixes_with_var_labels_float_suffix{name="Jack"} 26.62
multi_suffixes_with_var_labels_float_suffix{name="Jane"} 24.419999999999998
multi_suffixes_with_var_labels_float_suffix{name="John"} 22.220000000000002
# HELP multi_suffixes_with_var_labels_int_suffix multi_suffixes_with_var_labels: int_suffix
# TYPE multi_suffixes_with_var_labels_int_suffix gauge
multi_suffixes_with_var_labels_int_suffix{name="Jack"} 26
multi_suffixes_with_var_labels_int_suffix{name="Jane"} 24
multi_suffixes_with_var_labels_int_suffix{name="John"} 22
# HELP multi_suffixes_without_common_labels_float_suffix multi_suffixes_without_common_labels: float_suffix
# TYPE multi_suffixes_without_common_labels_float_suffix gauge
multi_suffixes_without_common_labels_float_suffix 73.25999999999999
# HELP multi_suffixes_without_common_labels_int_suffix multi_suffixes_without_common_labels: int_suffix
# TYPE multi_suffixes_without_common_labels_int_suffix gauge
multi_suffixes_without_common_labels_int_suffix 72
# HELP multi_suffixes_without_common_labels_with_desc_float_suffix single basic with description: float_suffix
# TYPE multi_suffixes_without_common_labels_with_desc_float_suffix gauge
multi_suffixes_without_common_labels_with_desc_float_suffix 73.25999999999999
# HELP multi_suffixes_without_common_labels_with_desc_int_suffix single basic with description: int_suffix
# TYPE multi_suffixes_without_common_labels_with_desc_int_suffix gauge
multi_suffixes_without_common_labels_with_desc_int_suffix 72
